fixed scroll jumping

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -40,7 +40,7 @@ main {
     position: absolute;
     left: 0; top: 0; right: 0; bottom: 0;
     color: var(--editor-text-color);
-    content:  var(--preview-text);
+    content: var(--preview-text);
 }
 
 #search-preview {
@@ -64,14 +64,14 @@ main {
     white-space: break-spaces;
     overflow-y : auto;
     overflow-x : hidden;
-    padding: 6vh 18vw 80px 18vw;
+    padding: 6vh 18vw 200px 18vw;
     font-size: var(--font-size);
     transition: padding .15s ease;
 }
 
 @media (max-width: 1150px) {
     #search-preview, #text-preview, #text-editor {
-        padding: 20px 20px 80px 20px;
+        padding: 20px 20px 200px 20px;
     }
 }
 
