--- a/web/themes/aske.css
+++ b/web/themes/aske.css
@@ -2,7 +2,7 @@
     --editor-background-color: #cfcfcf;
     --editor-code-background-color: #c1c1c1;
     --editor-text-color: #333333;
-    --editor-accent-color: #252525;
+    --editor-accent-color: #0e0e0e;
     --editor-muted-color: #9c9c9c;
     --selection-color: #b7b7b7;
 
