--- a/web/themes/gleam.css
+++ b/web/themes/gleam.css
@@ -3,7 +3,7 @@
     --editor-code-background-color: #d9d7d2;
     --editor-text-color: #515050;
     --editor-accent-color: #b6160a;
-    --editor-muted-color: #a5a4a4;
+    --editor-muted-color: #b3b2b2;
     --selection-color: #c5c4c0;
 
     --sidebar-background-color: #e3e2dd;
