--- a/web/themes/perlin.css
+++ b/web/themes/perlin.css
@@ -3,7 +3,7 @@
     --editor-code-background-color: #232323;
     --editor-text-color: #bab6b6;
     --editor-accent-color: #e3d1bb;
-    --editor-muted-color: #747171;
+    --editor-muted-color: #575555;
     --selection-color: #424141;
 
     --sidebar-background-color: #2b2b2b;
