--- a/web/themes/spirit.css
+++ b/web/themes/spirit.css
@@ -3,7 +3,7 @@
     --editor-code-background-color: #121212;
     --editor-text-color: #cccccc;
     --editor-accent-color: #d56a6a;
-    --editor-muted-color: #5a5a5a;
+    --editor-muted-color: #515151;
     --selection-color: #3d3d3d;
 
     --sidebar-background-color:#1d1d1d;
